# allumette

./: Cargo.toml  README.md  slides.md
.github/workflows/: rust.yml
img/: benchmark_plot.p  config.json  dag.mmd  dag_branching_bwd.mmd  dag_branching_fwd.mmd  dag_bwd.mmd  dag_fwd.mmd  oneoverx.p  profile_pie.p  profile_plot.p
src/: autodiff.rs  hof.rs  lib.rs  main.rs  math.rs  module.rs  parameter.rs  tensor.rs  variable.rs
src/autodiff/: central_diff.rs  context.rs  forward.rs  gradients.rs  history.rs  mod.rs  scalar.rs  scalar_function.rs  scalar_history.rs  trace.rs
src/backend/: backend.rs  backend_type.rs  gpu.rs  mod.rs  mode.rs  parallel.rs  sequential.rs
src/data/: cpu_tensor_data.rs  dataset.rs  gpu_tensor_data.rs  graph.rs  mod.rs  tensor_data.rs
src/fns/: binary.rs  function.rs  mod.rs  unary.rs
src/function/: binary.rs  function.rs  unary.rs
src/math/: binary.rs  element.rs  math_binary.rs  mod.rs  unary.rs  unsafe_convert.rs
src/module/: mod.rs  module.rs  parameter.rs  parameter_f.rs
src/ops/: binary.rs  binary_ops.rs  function.rs  gpu.rs  mod.rs  ops.rs  parallel.rs  sequential.rs  tensor_ops.rs  unary.rs  unary_ops.rs
src/optim/: gradient_descent.rs  mod.rs  optimizer.rs  scalar_optimizer.rs  sgd.rs
src/scalar/: forward.rs  mod.rs  scalar.rs  scalar_function.rs  scalar_history.rs
src/shaders/: map.wgsl
src/shaping/: idx.rs  mod.rs  order.rs  shape.rs  shaped.rs  strides.rs
src/storage/: cpu_data.rs  data.rs  gpu_data.rs  mod.rs
src/tensor/: forward.rs  idx.rs  mod.rs  order.rs  shape.rs  strides.rs  tensor.rs  (+2 more)
(+57 files in other folders)
