[package]
name = "allumette"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
flume = "0.11.1"
futures = "0.3.31"
proptest = "1.9.0"
rand = "0.8.5"
rayon = "1.10.0"
wgpu = "27.0.1"
ratatui = { path = "../ratatui/ratatui" }
ratatui-core = { path = "../ratatui/ratatui-core" }
#ratatui-crossterm = { path = "../ratatui/ratatui-crossterm" }
ratatui-macros = { path = "../ratatui/ratatui-macros" }
ratatui-widgets = { path = "../ratatui/ratatui-widgets" }
